--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,16 @@ dependencies:
     sdk: flutter
   dash_chat: ^1.1.15
   universal_platform: ^0.1.3
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  # sendbirdsdk:
+  #   git: https://github.com/sendbird/messaging-flutter.git
+  sendbirdsdk:
+    hosted:
+      name: sendbirdsdk
+      url: https://dl.cloudsmith.io/public/sendbird/sendbird-sdk-flutter/dart/
+    version: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
