--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  logger: ^0.9.4
+  mime: ^0.9.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
