--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   universal_platform: ^0.1.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.1
+  # cupertino_icons: ^1.0.1
   # sendbirdsdk:
   #   git: https://github.com/sendbird/messaging-flutter.git
   sendbirdsdk:
@@ -40,8 +40,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  integration_test:
-    sdk: flutter
+  # integration_test:
+  #   sdk: flutter
   logger: ^0.9.4
   mime: ^0.9.7
 
